[package]
name = "tpu-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tpu-monitor"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
